--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -35,11 +35,11 @@ font-size: 16px}
 
 h1 {font-family: "Helvetica";
 	font-size: 16px;
-	font-color: #333333;}
+	color: #333333;}
 	
 h2 {font-family: "Helvetica";
 	font-size: 14px;
-	font-color: #333333;}
+	color: #333333;}
 
 ul {
 	/*text-align:center;*/
